--- a/styles/default.css
+++ b/styles/default.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'Lato', sans-serif;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -21,7 +21,7 @@ a, a:hover, a:visited, a:active {
 }
 
 .site-footer {
-  background-color: #041a22;
+  background-color: #290274;
   color: #fff;
   padding: 20px 0;
   font-size: 12px; 
@@ -69,3 +69,28 @@ code .o, code .op { color: #f8f8f2; }
 code .nb, code .nc, code .ne, code .ni, code .nn { color: #a6e22e; }
 code .nv, code .vg { color: #ae81ff; }
 
+.navbar-brand img {
+  max-width: 450px;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .navbar-brand img {
+    max-width: 320px;
+    height: auto;
+  }
+}
+
+.navbar-nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-item {
+  margin-left: 20px;
+}
+
+.navbar-nav .nav-link {
+  padding-left: 0;
+  padding-right: 0;
+}
