--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,15 @@ layout: default
 ---
 
 <div class="container mt-4">
-    <h3>{{ page.title }}</h3>
+    <h3>{{ page.title.pt }}</h3>
     <i class="post-date">{{ page.date | date: "%d-%m-%Y" }}</i>
-    {{ content }}
+    
+    <h4>🇧🇷 Português</h4>
+    <p>{{ page.content.pt }}</p>
+    
+    <h4>🇬🇧 English</h4>
+    <p>{{ page.content.en }}</p>
+    
+    <h4>🇪🇸 Español</h4>
+    <p>{{ page.content.es }}</p>
 </div>
