--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="container mt-4">
-    <h3>{{ page.title.pt }}</h3>
+    <h3>{{ page.title.pt }} • {{ page.title.en }} • {{ page.title.es }}</h3>
     <i class="post-date">{{ page.date | date: "%d-%m-%Y" }}</i>
     
     <h4>🇧🇷 Português</h4>
