--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,11 +7,11 @@ layout: default
     <i class="post-date">{{ page.date | date: "%d-%m-%Y" }}</i>
     
     <h4>🇧🇷 Português</h4>
-    <p>{% raw %}{{ page.content.pt | markdownify }}{% endraw %}</p>
+    <p>{{ page.content.pt }}</p>
     
     <h4>🇬🇧 English</h4>
-    <p>{% raw %}{{ page.content.en | markdownify }}{% endraw %}</p>
+    <p>{{ page.content.en | markdownify }}</p>
     
     <h4>🇪🇸 Español</h4>
-    <p>{% raw %}{{ page.content.es | markdownify }}{% endraw %}</p>
+    <p>{{ page.content.es | markdownify }}</p>
 </div>
