--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,11 +7,11 @@ layout: default
     <i class="post-date">{{ page.date | date: "%d-%m-%Y" }}</i>
     
     <h4>🇧🇷 Português</h4>
-    <p>{{ page.content.pt }}</p>
+    <p>{{ page.content_pt }}</p>
     
     <h4>🇬🇧 English</h4>
-    <p>{{ page.content.en | markdownify }}</p>
+    <p>{{ page.content_en }}</p>
     
     <h4>🇪🇸 Español</h4>
-    <p>{{ page.content.es | markdownify }}</p>
+    <p>{{ page.content_es }}</p>
 </div>
