--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,15 +3,15 @@ layout: default
 ---
 
 <div class="container mt-4">
-    <h3>{{ page.title.pt }} • {{ page.title.en }} • {{ page.title.es }}</h3>
+    <h3>{{ page.title.en }} • {{ page.title.pt }} • {{ page.title.es }}</h3>
     <i class="post-date">{{ page.date | date: "%d-%m-%Y" }}</i>
     
-    <h4>🇧🇷 Português</h4>
+    <b>🇬🇧 English</b>
+    <p>{{ page.content_en }}</p>
+
+    <b>🇧🇷 Português</b>
     <p>{{ page.content_pt }}</p>
     
-    <h4>🇬🇧 English</h4>
-    <p>{{ page.content_en }}</p>
-    
-    <h4>🇪🇸 Español</h4>
+    <b>🇪🇸 Español</b>
     <p>{{ page.content_es }}</p>
 </div>
